# nu_plugin_hashes

./: Cargo.toml  README.md  build.rs
src/: lib.rs  special_hashers.rs
