[package]
name = "nu_plugin_hashes"
description = "A Nushell plugin that adds cryptographic hash functions from Hashes project"
keywords = ["nu", "plugin", "hash"]
categories = ["algorithms"]
repository = "https://github.com/ArmoredPony/nu_plugin_hashes"
license = "MIT"
version = "0.1.9"
edition = "2021"

[features]
default = [
    "ascon-hash",
    "belt-hash",
    "blake2",
    "blake3",
    "cshake",
    "fsb",
    "gost94",
    "groestl",
    "jh",
    "k12",
    "kmac",
    "md2",
    "md4",
    "parallel_hash",
    "ripemd",
    "sha1",
    "sha1-checked",
    "sha2",
    "sha3",
    "shabal",
    "skein",
    "sm3",
    "streebog",
    "tiger",
    "tuple_hash",
    "whirlpool",
]

# Map these specific features directly to the reliable tiny-keccak crate
cshake = ["tiny-keccak/cshake"]
k12 = ["tiny-keccak/k12"]
kmac = ["tiny-keccak/kmac"]
tuple_hash = ["tiny-keccak/tuple_hash"]
parallel_hash = ["tiny-keccak/parallel_hash"]

[dependencies]
nu-cmd-base = "0.112.2"
nu-plugin = "0.112.2"
nu-protocol = "0.112.2"
digest = "0.10.7"
tiny-keccak = { version = "2.0.2", optional = true }
ascon-hash = { version = "0.2.0", optional = true }
belt-hash = { version = "0.1.1", optional = true }
blake2 = { version = "0.10.6", optional = true }
blake3 = { version = "1.6.1", optional = true, default-features = false, features = ["std", "traits-preview"] }
fsb = { version = "0.1.3", optional = true }
gost94 = { version = "0.10.4", optional = true }
groestl = { version = "0.10.1", optional = true }
jh = { version = "0.1.0", optional = true }
md2 = { version = "0.10.2", optional = true }
md4 = { version = "0.10.2", optional = true }
ripemd = { version = "0.1.3", optional = true }
sha1 = { version = "0.10.6", optional = true }
sha1-checked = { version = "0.10.0", optional = true }
sha2 = { version = "0.10.8", optional = true }
sha3 = { version = "0.10.8", optional = true }
shabal = { version = "0.4.1", optional = true }
skein = { version = "0.1.0", optional = true }
sm3 = { version = "0.4.2", optional = true }
streebog = { version = "0.10.2", optional = true }
tiger = { version = "0.2.1", optional = true }
whirlpool = { version = "0.10.4", optional = true }

[build-dependencies]
digest = "0.10.7"
ascon-hash = { version = "0.2.0", optional = true }
belt-hash = { version = "0.1.1", optional = true }
blake2 = { version = "0.10.6", optional = true }
blake3 = { version = "1.6.1", optional = true, default-features = false, features = ["std", "traits-preview"] }
fsb = { version = "0.1.3", optional = true }
gost94 = { version = "0.10.4", optional = true }
groestl = { version = "0.10.1", optional = true }
jh = { version = "0.1.0", optional = true }
md2 = { version = "0.10.2", optional = true }
md4 = { version = "0.10.2", optional = true }
ripemd = { version = "0.1.3", optional = true }
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.8", optional = true }
sha3 = { version = "0.10.8", optional = true }
shabal = { version = "0.4.1", optional = true }
skein = { version = "0.1.0", optional = true }
sm3 = { version = "0.4.2", optional = true }
streebog = { version = "0.10.2", optional = true }
tiger = { version = "0.2.1", optional = true }
whirlpool = { version = "0.10.4", optional = true }

[dev-dependencies]
nu-plugin-test-support = "0.112.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
